# TITAN

./: .coverage  .gitignore  404.html  ABM_core.py  Dockerfile  HIVABM_PartialNetwork.py  HIVABM_Population.py  InputParameters.csv  LICENSE  MP_simulation.py  Manifest.toml  NSP_SAT.csv  Project.toml  README.md  RI_OD_sanity.py  SC_non_static.yml  agent.py  analysis_output.py  bm_scratch.py  calScript.sh  calTrt.py  calTrt.sh  calibration.yml  citations.bib  codecov.yml  demographics.yml  dev_requirements.txt  dotmap_params.txt  incarVariation.sh  incarcerate.py  index.html  loadInput.py  mkdocs.yml  parameterVariation.sh  params.yml  partnering.py  profile.json  profile.prof  pyproject.toml  pytest.ini  (+10 more)
.github/: pull_request_template.md
.github/workflows/: deploy_docs.yml  deploy_pypi.yml  main.yml  unit-tests.yml  (+1 more)
TITAN/: ABM_core.py  HIVABM_Population.py  agent.py  analysis_output.py  simulation_lib.py  subTitan.sh
contributing/: index.html
docs/: contributing.md  getting_started.md  index.md  my_page.md  run_local.md  run_oscar.md  running.md  user_guide.md  walkthrough.md
getting_started/: index.html
ipynb/: DebugSuite.ipynb  Fitting.ipynb  Sample Network Vis.ipynb  TITANgui-checkpoint.ipynb  TITANgui.ipynb  TITANgui_08112018.ipynb  backup_TITANgui.ipynb
missouri/: demographics.yml  model.yml
oldCal/: ABM_core.py  OD_cal.py  RI_Overdose_R21_base_params.py  agent.py  calDeath.py  calDeath_copy.py  calIncar.py  calTrt.py  calTrt.sh  deathCal.sh  diffLines.sh  hundredpercent.py  incarVariation.sh  incarceration.py  memtest.sh  test.py  trial.py  varyIncar.py  varyTrt.py
override/: footer.html
params_replace/: Manifest.toml  dotmap_merge.jl  dotmap_params.txt  dotmap_updates.txt  params_replace.jl  post_process_map.txt  to_yaml.py
python/: pyvenv.cfg
results/: params.yml
results_oldeffectivesize/: params.yml
run_local/: index.html
run_oscar/: index.html
scripts/: bs_Core.sh  julia_partnering_benchmark.jl  profiling.py  python_partnering_benchmark.py  subTitan.sh  subTitan_JA_p2.sh
search/: search_index.json
settings/: Atlanta_Base_Case.yml  California_2012.py  generic_params.py
src/: ABM_core.py  ABM_partnering.py  DebugSuite.ipynb  HIVABM_PartialNetwork.py  HIVABM_Population.py  MP_simulation.py  __init__.py  agent.py  analysis_output.py  analysis_outputkeep.py  bs_Core.sh  distributionCalc.py  loadInput.py  network_graph_tools.py  params.py  path.to.file  probabilities.py  program.prof  program2.prof  run_titan.py  sampleNetworkViz.py  simpleNetworkVis.py  simulation_lib.py  test.py
tests/: ABM_core_test.py  ABM_partnering_test.py  HIVABM_Population_test.py  agent_test.py  analysis_output_test.py  conftest.py  integration_test.py  location_test.py  model_test.py  network_graph_tools_test.py  network_test.py  output_test.py  params_parse_test.py  parse_params_test.py  partnering_test.py  population_io_test.py  population_network_test.py  population_test.py  probabilities_test.py  run_titan_test.py  simulation_lib_test.py  utils_test.py
titan/: .model.py.swp  ABM_core.py  ABM_partnering.py  HIVABM_Population.py  __init__.py  agent.py  analysis_output.py  distributions.py  dotmap.jl  location.py  model.py  network.py  network_graph_tools.py  output.py  params.py  params.yaml  params2.py  params_definitions.yml  params_parse.py  parse_params.py  partnering.jl  partnering.py  population.py  population_io.py  population_network.py  probabilities.py  run_titan.py  simulation_lib.py  utils.jl  utils.py
titan.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
venv_pypy/: pyvenv.cfg
(+428 files in other folders)
