[tool.poetry]
name = "titan"
version = "2.3.0"
description = "TITAN Agent Based Model"
license = "GPL-3.0-only"
authors = ["Sam Bessey <sam_bessey@brown.edu>", "Mary McGrath <mary_mcgrath@brown.edu>"]
readme = "README.md"
homepage = "titanmodel.org"
repository = "https://github.com/pph-collective/TITAN"
documentation = "https://pph-collective.github.io/titan"
classifiers = ["Operating System :: OS Independent"]
packages = [{ include = "titan" }]

[tool.poetry.dependencies]
python = "^3.6"
paraml= "^0.1"
networkx = "^2.4"
nanoid = "^2.0"
numpy = "^1.18"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", optional = true}
flake8 = {version = "^3.8", optional = true}
mypy = {version = "^0.812", optional = true}
pytest = "^6.2"
pytest-cov = "^2.8"
mkdocs = {version = "^1.1", optional = true}
mkdocs-material = {version = "^7.0", optional = true}
mkdocstrings = {version = "^0.15.0", optional = true}

[tool.poetry.extras]
linting = ["black", "flake8", "mypy"]
docs = ["mkdocs", "mkdocs-material", "mkdocstrings"]

[tool.poetry.scripts]
run_titan = "titan:script_init"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# TODO update docs for install instructions, test with pypy
