[tool.poetry]
name = "titan-model"
version = "3.0.0"
description = "TITAN Agent Based Model"
license = "GPL-3.0-only"
authors = ["Sam Bessey <sam_bessey@brown.edu>", "Mary McGrath <mary_mcgrath@brown.edu>"]
readme = "README.md"
homepage = "https://titanmodel.org"
repository = "https://github.com/pph-collective/TITAN"
documentation = "https://pph-collective.github.io/titan"
classifiers = ["Operating System :: OS Independent"]
packages = [{ include = "titan" }]

[tool.poetry.dependencies]
python = "^3.6"
paraml= "^0.1"
networkx = "^2.4"
nanoid = "^2.0"
numpy = "^1.18"
black = {version = "^20.8b1", optional = true}
flake8 = {version = "^3.8", optional = true}
mypy = {version = "^0.812", optional = true}
mkdocs = {version = "^1.1", optional = true}
mkdocs-material = {version = "^7.0", optional = true}
mkdocstrings = {version = "^0.15.0", optional = true}
oyaml = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
pytest-cov = "^2.8"

[tool.poetry.extras]
linting = ["black", "flake8", "mypy"] # doesn't work on pypy
docs = ["mkdocs", "mkdocs-material", "mkdocstrings"]

[tool.poetry.scripts]
run_titan = "titan.run_titan:script_init"
grid2edges = "titan.utils:grid_to_edges_cli"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
